Fix accordian nav wrap & page padding bottom

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -61,7 +61,7 @@
   @media (max-width: 1150px) {
     overflow: visible;
     height: auto;
-    padding-bottom: 25px;
+    padding-bottom: 50px;
   }
 }
 
